@@ -7,6 +7,7 @@ Comment[fr]=synthv1 est un synthétiseur polyphonique de la vieille école
 Exec=@ac_prefix@/bin/synthv1_jack
 Icon=synthv1
 Categories=Audio;AudioVideo;Midi;X-Alsa;X-Jack;Qt;
+Keywords=Audio;MIDI;ALSA;JACK;Synthesizer;LV2;Qt;
 Terminal=false
 Type=Application
 X-SuSE-translate=true
