@@ -4,6 +4,11 @@ synthv1 - an old-school polyphonic synthesizer
 ChangeLog
 
 
+GIT HEAD
+
+- Added application keywords to freedesktop.org's AppData.
+
+
 0.7.2  2015-12-04  The eighth official beta.
 
 - A brand new LFO BPM control parameter is being introduced,
